TBN matrix